<resources>
    <string name="system_title">博图纵横即时通讯</string>
    <string name="module_name">博图纵横即时通讯</string>
    <string name="ACCOUNT_TYPE">org.jitsi.android.account</string>
    <string name="send_process_signal">Send Process Signal</string>
    <string name="stop_osgi_framework">Stop OSGi Framework</string>
    <string name="in_call_with">In call with </string>
    <string name="settings">设置</string>
    <string name="username_hint">用户名</string>
    <string name="username_label">用户名:</string>
    <string name="password">密码</string>
    <string name="password_label">密码:</string>
    <string name="store_password">记住密码</string>
    <string name="sign_in">登录</string>
    <string name="network">网络协议</string>
    <string name="choose_network">选择网络协议</string>
    <string-array name="networks_array">
        <item>SIP</item>
        <item>XMPP</item>
    </string-array>
    <string-array name="networks_array_values">
        <item>SIP</item>
        <item>Jabber</item>
    </string-array>
    <string name="enter_name_or_number">输入名称或号码</string>
    <string name="hang_up">挂断</string>
    <string name="reversal_camera">切换前后摄像头</string>
    <string name="accept_call_video">接听</string>
    <string name="hold">搁置</string>
    <string name="show_call_info">通讯信息</string>
    <string name="show_call_zrtp_info">"Call ZRTP info</string>
    <string name="video_resolution">视频分辨率</string>
    <string name="low_video_resolution">320x240</string>
    <string name="high_video_resolution">640x480</string>
    <string name="exit_app">退出</string>
    <string name="service_gui_UNKNOWN_CONTACT">未知</string>
    <string name="service_gui_ACCOUNT_ME">我</string>
    <string name="service_gui_ACCOUNT_SETTINGS">帐户设置</string>
    <string name="service_gui_ACCOUNT_DISCONNECTED">%s 断开连接</string>
    <string name="service_gui_CONTACT_PAUSED_TYPING">停止输入</string>
    <string name="service_gui_CONTACT_TYPING">正在输入&#8230;</string>
    <string name="service_gui_BUSY_STATUS">忙碌</string>
    <string name="service_gui_ADD_AUTHORIZED_CONTACT">Add %s to your contact list</string>
    <string name="service_gui_ADD_GROUP_LOCAL_ERROR">
        Failed to add group with name: %s. The problem occurred during a local IO operation.
    </string>
    <string name="service_gui_ADD_GROUP_EXIST_ERROR">
        The group %s already exists in your contact list. Please choose another name.
    </string>
    <string name="service_gui_ADD_GROUP_NET_ERROR">
        Failed to add group with name: %s. The problem occurred due to a network failure.
        Please check your network connection and try again.
    </string>
    <string name="service_gui_ADD_GROUP_ERROR">
        Failed to add group with name: %s.
    </string>
    <string name="service_gui_ADD_GROUP_EMPTY_NAME">
        The group name must not be empty.
    </string>
    <string name="service_gui_ADD_GROUP_HINT">
        Enter group name
    </string>
    <string name="service_gui_ADD_GROUP">Create group</string>
    <string name="service_gui_AT">at</string>
    <string name="service_gui_AUTHENTICATION_REJECTED">contact has rejected your authorization request.</string>
    <string name="service_gui_AUTHENTICATION_WINDOW_TITLE">%s authentication</string>
    <string name="service_gui_AUTHENTICATION_REQUESTED">Authentication requested</string>
    <string name="service_gui_AUTHENTICATION_REQUESTED_SERVER">The %s server has requested your authentication.</string>
    <string name="service_gui_AUTHORIZE">Authorize</string>
    <string name="service_gui_AUTHORIZATION_ACCEPTED">contact has accepted your authorization request.</string>
    <string name="service_gui_AUTHORIZATION_REQUESTED">Authorization requested</string>
    <string name="service_gui_AUTHORIZATION_REQUESTED_INFO">The %s contact requests your authorization.</string>
    <string name="service_gui_AUTHORIZATION_RESPONSE">Authorization response</string>
    <string name="service_gui_CREATE_GROUP_NAME">
        In the field below enter the name of the group you would like to create.
    </string>
    <string name="service_gui_DENY">Deny</string>
    <string name="service_gui_DURATION">duration</string>
    <string name="service_gui_EDITED_AT">edited at %s</string>
    <string name="service_gui_IGNORE">Ignore</string>
    <string name="service_gui_INFO">Info</string>
    <string name="service_gui_LAST_MSG_CORRECTION">Last message correction</string>
    <string name="service_gui_NOT_AUTHORIZED">未经授权</string>
    <string name="service_gui_OUTGOING_CALL">Outgoing call</string>
    <string name="service_gui_OUTGOING_CALL_MSG">Connecting with %s…</string>
    <string name="service_gui_TYPE_YOUR_REQUEST">Type your request here</string>
    <string name="service_gui_REQUEST">发起请求</string>
    <string name="service_gui_REQUEST_AUTHORIZATION">请求授权</string>
    <string name="service_gui_REQUEST_AUTHORIZATION_MSG">
        Can\'t add %1$s to your Contact List.
        %1$s must authorize your request to add him/her.
        Please enter your request below.
    </string>
    <string name="service_gui_RE_REQUEST_AUTHORIZATION">重新请求授权</string>
    <string name="service_gui_REMOVE">删除</string>
    <string name="service_gui_REMOVE_CONTACT">删除联系人</string>
    <string name="service_gui_REMOVE_CONTACT_TEXT">
        <DIV>Are you sure you want to remove <B> %s </B><BR/>from your contact list?</DIV>
    </string>
    <string name="service_gui_REMOVE_ACCOUNT">移除账户</string>
    <string name="service_gui_REMOVE_ACCOUNT_MESSAGE">你确定要删除 %s 吗?</string>
    <string name="service_gui_RESTORING">正在恢复&#8230;</string>
    <string name="service_gui_SHUTDOWN_IN_PROGRESS">正在关闭&#8230;</string>
    <string name="service_gui_VOLUME_GAIN_LEVEL">Volume gain level: %s%%</string>
    <string name="service_gui_WARN_CALL_IN_PROGRESS">正在通话，退出操作&#8230;</string>
    <string name="service_gui_SIGN_IN">登录</string>
    <string name="service_gui_SIGN_OUT">退出登录</string>
    <string name="service_gui_CREATE_ACCOUNT">切换账户</string>
    <string name="service_gui_LOGIN_FAILED">登录失败</string>
    <string name="service_gui_LOGIN_NETWORK_ERROR">
        Unable to log in with account: User name: {0}, Server name: {1}, due to a network failure. Please check your network connection.
    </string>
    <string name="service_gui_LOGIN_GENERAL_ERROR">
        An error occurred while logging in with account: User name: {0}, Server name: {1}:{2}.
    </string>
    <string name="service_gui_LOGIN_INTERNAL_ERROR">
        An error occurred while logging in with account: User name: {0}, Server name: {1}. This is most probably an internal application error. Please report the problem to our developers mailing list (dev@bim.java.net).
    </string>
    <string name="service_gui_LOGIN_INVALID_PROPERTIES_ERROR">
        Unable to log in with account: User name: {0}, Server name: {1}, due to an account configuration problem. Please check your account configuration.
    </string>
    <string name="service_gui_USERNAME_NULL">
        Please fill your username and password.
    </string>
    <string name="service_gui_USER_EXISTS_ERROR">
        This user already exists on the selected network. Please choose another user or network.
    </string>
    <string name="service_gui_SPECIFY_SERVER">
        Please complete the server part of your account.
    </string>
    <string name="service_gui_ACCOUNT_CREATION_FAILED">
        We failed to create your account due to the following error:
    </string>
    <string name="plugin_reconnectplugin_CONNECTION_FAILED_MSG">
        Connection failed for the following account:\n
        User name: {0}, Server name: {1}.\n
        Please check your settings or contact your network administrator for more information.
    </string>
    <string name="plugin_reconnectplugin_NETWORK_DOWN">
        网络连接丢失!
    </string>
    <string name="service_gui_AVATAR_SET_ERROR">Failed to set avatar for %s</string>
    <string name="service_gui_CLOSE">关闭</string>
    <string name="service_gui_CLOSE_CHAT">关闭聊天</string>
    <string name="service_gui_CLOSE_ALL_CHATS">关闭所有聊天</string>
    <string name="service_gui_COPY_MESSAGE_TEXT">复制文本</string>
    <string name="service_gui_OK">是的</string>
    <string name="service_gui_YES">确认</string>
    <string name="service_gui_NO">不是</string>
    <string name="service_gui_CANCEL">取消</string>
    <string name="service_gui_SEARCH">搜索</string>
    <string name="service_gui_ADD_CONTACT">添加联系人</string>
    <string name="service_gui_ON">On</string>
    <string name="service_gui_ONLINE">在线</string>
    <string name="service_gui_OFF">Off</string>
    <string name="service_gui_OFFLINE">离线</string>
    <string name="service_gui_FFC_STATUS">空闲</string>
    <string name="service_gui_AWAY_STATUS">离开</string>
    <string name="service_gui_DND_STATUS">请勿打扰</string>
    <string name="service_gui_RETRY">重试</string>
    <string name="service_gui_SEND_LOGS_QUESTION">BIM has just recovered after serious crash. Do you want to send the logs ?</string>
    <string name="service_gui_ERROR">Error</string>
    <string name="service_gui_ERROR_WAS">Error was: {0}</string>
    <string name="service_gui_WARNING">Warning</string>
    <string name="service_gui_AUTHENTICATION_FAILED">
        Authentication failed for {0}. The password you entered is not valid.
    </string>
    <string name="service_gui_CONNECTION_FAILED_MSG">Connection failed for the
        following account: User name: {0}, Server name: {1}. Please check your
        network connection or contact your network administrator for more
        information.</string>
    <string name="service_gui_NEW_ACCOUNT">Add new account</string>
    <string name="service_gui_LOADING">Loading</string>
    <string name="service_gui_ACCOUNTS">Accounts</string>
    <string name="service_gui_CALL">呼叫</string>
    <string name="service_gui_VIDEO_CALL">视频通话</string>
    <string name="service_gui_CONTACTS">Contacts</string>
    <string name="service_gui_ENTER_NAME_OR_NUMBER">Enter name or number</string>
    <string name="service_gui_MISSED_CALLS_TOOL_TIP">Missed calls from:</string>
    <string name="service_gui_MOVE">Move</string>
    <string name="service_gui_MOVE_SUBCONTACT">Move contact</string>
    <string name="service_gui_MOVE_SUBCONTACT_MSG">
    Select the contact or the group, where you would like to move the selected contact.
    </string>
    <string name="service_gui_MOVE_SUBCONTACT_FAILED">
    The contact you have chosen is the same as \n the source one. Please choose another contact!
    </string>
    <string name="service_gui_MOVE_SUBCONTACT_QUESTION">
    Are you sure you want to move %1$s to %2$s?
    </string>
    <string name="service_gui_MOVE_TO_GROUP">Move to group</string>
    <string name="service_gui_MOVE_CONTACT">Move Contact</string>
    <string name="service_gui_MOVE_CONTACT_ERROR">Contact cannot be moved</string>
    <string name="service_gui_MSG_DELIVERY_FAILURE">
        The above message could not be delivered
    </string>
    <string name="service_gui_MSG_DELIVERY_NOT_SUPPORTED">
        The protocol you are using doesn\'\'t \
        support offline messages. You could try to reach {0} through another \
        protocol or wait until he/she becomes online.
    </string>
    <string name="service_gui_MSG_DELIVERY_INTERNAL_ERROR">
        An internal error occurred. This is most probably a bug. Please report it here: https://bmtech.org/Development/BugsAndIssues.
    </string>
    <string name="service_gui_MSG_DELIVERY_ERROR">
        Failed to deliver message.
    </string>
    <string name="service_gui_VOLUME_CONTROL_TOOL_TIP">Adjust volume</string>
    <string name="service_gui_MUTE_BUTTON_TOOL_TIP">Adjust microphone sound</string>
    <string name="service_gui_LOCAL_VIDEO_BUTTON_TOOL_TIP">Toggle video</string>
    <string name="service_gui_SELECT_GROUP">Select group</string>
    <string name="service_gui_ALWAYS_TRUST">Always trust this certificate</string>
    <string name="service_gui_CONTINUE_ANYWAY">仍然继续</string>
</resources>