<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="@dimen/screen_padding"
    android:gravity="center"
    android:layout_centerHorizontal="true"
    android:orientation="vertical"
    android:background="@mipmap/loginbackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/item_height"
        android:text="@string/system_title"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="50dp"
        android:textSize="@dimen/system_title_text_size" />

    <!--
    <Spinner
        android:id="@+id/networkSpinner"
        android:prompt="@string/choose_network"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/item_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/between_padding"
        android:background="@mipmap/whitespinner"/>
    -->

    <EditText
        android:id="@+id/usernameField"
        android:hint="@string/username_hint"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:padding="10dp"
        android:inputType="text"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/between_padding" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:padding="10dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/between_padding" />

    <Button
        android:id="@+id/signInButton"
        android:text="@string/service_gui_SIGN_IN"
        android:focusable="true"
        android:textColor="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/between_padding"
        android:background="@drawable/signin_button"/>

</LinearLayout>