<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:shrinkColumns="1" />

        <CheckBox
            android:id="@+id/alwaysTrust"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_gui_ALWAYS_TRUST" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onCancelClicked"
                android:text="@string/service_gui_CANCEL" />

            <Button
                android:id="@+id/continueBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onContinueClicked"
                android:text="@string/service_gui_CONTINUE_ANYWAY" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>